added javafx option